@@ -4,7 +4,7 @@ Description: AyaSpirit is a Fully Responsive WordPress Theme, a perfect choice f
 Theme URI: https://ayatemplates.com/product/ayaspirit
 Author: ayatemplates
 Author URI: https://ayatemplates.com
-Version: 1.0.3
+Version: 1.0.4
 Text Domain: ayaspirit
 Tags: blog, two-columns, right-sidebar, custom-background, custom-colors, custom-header, custom-menu, featured-images, post-formats, threaded-comments, translation-ready
 License: GNU General Public License v2.0
